Делаю страницу категорий: объявления через карточки

--- a/pages/category.html
+++ b/pages/category.html
@@ -183,6 +183,7 @@
 <!--Блок фильтров и объявлений-->
 <div class="container">
     <div class="row">
+<!--Блок фильтров-->
         <div class="col-3">
             <div class="row">
                 <div class="col-12 category_filter">
@@ -231,13 +232,48 @@
                 </div>
             </div>
         </div>
+<!--Основной блок объявлений-->
         <div class="col-9 category_ads">
-            <div class="row">
-                <div class="col-12">
-                    Значки типа отображения и сортировки объявлений
+            <div class="row row-cols-1 row-cols-md-4">
+                <div class="col mb-4">
+                    <div class="card">
+                        <img src="../img/printer_2.jpg" class="card-img-top">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12">
-                    Сами объявления
+                <div class="col mb-4">
+                    <div class="card">
+                        <img src="../img/print_str.jpg" class="card-img-top">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <img src="../img/print_main.jpg" class="card-img-top">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <img src="../img/noutebook.jpg" class="card-img-top">
+                        <div class="card-body">
+                            <p class="card-text">lorem</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <img src="../img/print_str.jpg" class="card-img-top">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
