Работаю над страницей категорий над отображением карточек, не могу победить выравнивание изображения

--- a/pages/category.html
+++ b/pages/category.html
@@ -236,42 +236,52 @@
         <div class="col-9 category_ads">
             <div class="row row-cols-1 row-cols-md-4">
                 <div class="col mb-4">
-                    <div class="card">
-                        <img src="../img/printer_2.jpg" class="card-img-top">
-                        <div class="card-body">
+                    <div class="card h-100">
+                        <img src="../img/printer_2.jpg" >
+                        <div class="card-footer">
+                            <h6 class="card-title">Заголовок карточки</h6>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <small class="text-muted">Последнее обновление: 3 мин. назад</small>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div class="card">
-                        <img src="../img/print_str.jpg" class="card-img-top">
-                        <div class="card-body">
+                    <div class="card h-100">
+                        <img src="../img/print_str.jpg">
+                        <div class="card-footer">
+                            <h6 class="card-title">Заголовок карточки</h6>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <small class="text-muted">Последнее обновление: 3 мин. назад</small>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div class="card">
-                        <img src="../img/print_main.jpg" class="card-img-top">
-                        <div class="card-body">
+                    <div class="card h-100">
+                        <img src="../img/print_main.jpg" class="img-fluid">
+                        <div class="card-footer">
+                            <h6 class="card-title">Заголовок карточки</h6>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <small class="text-muted">Последнее обновление: 3 мин. назад</small>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div class="card">
-                        <img src="../img/noutebook.jpg" class="card-img-top">
-                        <div class="card-body">
-                            <p class="card-text">lorem</p>
+                    <div class="card h-100">
+                        <img src="../img/noutebook.jpg" class="img-fluid">
+                        <div class="card-footer">
+                            <h6 class="card-title">Заголовок карточки</h6>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <small class="text-muted">Последнее обновление: 3 мин. назад</small>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div class="card">
-                        <img src="../img/print_str.jpg" class="card-img-top">
-                        <div class="card-body">
+                    <div class="card h-100">
+                        <img src="../img/print_str.jpg" class="img-fluid">
+                        <div class="card-footer">
+                            <h6 class="card-title">Заголовок карточки</h6>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <small class="text-muted">Последнее обновление: 3 мин. назад</small>
                         </div>
                     </div>
                 </div>
