Победил изображения в карточках объявлений.

--- a/pages/category.html
+++ b/pages/category.html
@@ -237,50 +237,50 @@
             <div class="row row-cols-1 row-cols-md-4">
                 <div class="col mb-4">
                     <div class="card h-100">
-                        <img src="../img/printer_2.jpg" >
+                        <div class="card-body">
+                            <img src="../img/printer_2.jpg" >
+                        </div>
                         <div class="card-footer">
-                            <h6 class="card-title">Заголовок карточки</h6>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <small class="text-muted">Последнее обновление: 3 мин. назад</small>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
                     <div class="card h-100">
-                        <img src="../img/print_str.jpg">
+                        <div class="card-body">
+                            <img src="../img/print_str.jpg">
+                        </div>
                         <div class="card-footer">
-                            <h6 class="card-title">Заголовок карточки</h6>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <small class="text-muted">Последнее обновление: 3 мин. назад</small>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
                     <div class="card h-100">
-                        <img src="../img/print_main.jpg" class="img-fluid">
+                        <div class="card-body">
+                            <img src="../img/print_main.jpg">
+                        </div>
                         <div class="card-footer">
-                            <h6 class="card-title">Заголовок карточки</h6>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <small class="text-muted">Последнее обновление: 3 мин. назад</small>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
                     <div class="card h-100">
-                        <img src="../img/noutebook.jpg" class="img-fluid">
+                        <div class="card-body">
+                            <img src="../img/noutebook.jpg">
+                        </div>
                         <div class="card-footer">
-                            <h6 class="card-title">Заголовок карточки</h6>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <small class="text-muted">Последнее обновление: 3 мин. назад</small>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
                     <div class="card h-100">
-                        <img src="../img/print_str.jpg" class="img-fluid">
+                        <div class="card-body">
+                            <img src="../img/print_str.jpg">
+                        </div>
                         <div class="card-footer">
-                            <h6 class="card-title">Заголовок карточки</h6>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <small class="text-muted">Последнее обновление: 3 мин. назад</small>
                         </div>
                     </div>
