Изображения в карточках товара не победил((( Продолжаю над ними работу...

--- a/pages/category.html
+++ b/pages/category.html
@@ -234,55 +234,57 @@
         </div>
 <!--Основной блок объявлений-->
         <div class="col-9 category_ads">
-            <div class="row row-cols-1 row-cols-md-4">
-                <div class="col mb-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <img src="../img/printer_2.jpg" >
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Последнее обновление: 3 мин. назад</small>
-                        </div>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
+                <div class="col">
+                    <div class="wrapper exmpl">
+                        <img src="../img/print_main.jpg">
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet.
                     </div>
                 </div>
-                <div class="col mb-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <img src="../img/print_str.jpg">
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Последнее обновление: 3 мин. назад</small>
-                        </div>
+                <div class="col">
+                    <div class="wrapper exmpl">
+                        <img src="../img/noutebook.jpg">
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, provident.
                     </div>
                 </div>
-                <div class="col mb-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <img src="../img/print_main.jpg">
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Последнее обновление: 3 мин. назад</small>
-                        </div>
+                <div class="col">
+                    <div class="wrapper exmpl">
+                        <img src="../img/phone.jpg">
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet.
                     </div>
                 </div>
-                <div class="col mb-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <img src="../img/noutebook.jpg">
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Последнее обновление: 3 мин. назад</small>
-                        </div>
+                <div class="col">
+                    <div class="wrapper exmpl">
+                        <img src="../img/print_str.jpg">
                     </div>
                 </div>
-                <div class="col mb-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <img src="../img/print_str.jpg">
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Последнее обновление: 3 мин. назад</small>
-                        </div>
+                <div class="col">
+                    <div class="wrapper exmpl">
+                        <img src="../img/phone_4.jpg">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="wrapper exmpl">
+                        <img src="../img/phone.jpg">
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="wrapper exmpl">
+                        <img src="../img/print_str.jpg">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="wrapper exmpl">
+                        <img src="../img/phone_4.jpg">
                     </div>
                 </div>
             </div>
