--- a/pages/category.html
+++ b/pages/category.html
@@ -233,58 +233,133 @@
             </div>
         </div>
 <!--Основной блок объявлений-->
-        <div class="col-9 category_ads">
+        <div class="col-9">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
-                <div class="col">
-                    <div class="wrapper exmpl">
-                        <img src="../img/print_main.jpg">
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Продам принтер HP 1010 как новый!">
+                            <img src="../img/print_main.jpg">
+                        </a>
                     </div>
                     <div>
-                        Lorem ipsum dolor sit amet.
+                        <a href="#" title="Продам принтер HP 1010 как новый!">
+                            <h6>Продам принтер HP 1010 как новый!</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 3230 руб.<span><i class="fa fa-legal"></i></span></p>
+
+                            <p class="address"> г. Самара, ул. Красногвардейская дом 20</p>
+                            <p class="time">Сегодня, 11:34</p>
+                        </a>
+
                     </div>
                 </div>
-                <div class="col">
-                    <div class="wrapper exmpl">
-                        <img src="../img/noutebook.jpg">
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Струйник L800 для печати фотографий">
+                            <img src="../img/print_str.jpg">
+                        </a>
                     </div>
                     <div>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, provident.
+                        <a href="#" title="Струйник L800 для печати фотографий">
+                            <h6>Куплю L800 для печати фотографий</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 6000 руб.<span><i class="fa fa-search"></i></span></p>
+                            <p class="address"> г. Хабаровск</p>
+                            <p class="time">Сегодня, 08:42</p>
+                        </a>
+
                     </div>
                 </div>
-                <div class="col">
-                    <div class="wrapper exmpl">
-                        <img src="../img/phone.jpg">
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Samsung SCX-4200 как новый">
+                            <img src="../img/printer_2.jpg">
+                        </a>
                     </div>
                     <div>
-                        Lorem ipsum dolor sit amet.
+                        <a href="#" title="Samsung SCX-4200 как новый">
+                            <h6>Samsung SCX-4200 как новый</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 2500 руб.<span><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Москва</p>
+                            <p class="time">01.06.2021</p>
+                        </a>
+
                     </div>
                 </div>
-                <div class="col">
-                    <div class="wrapper exmpl">
-                        <img src="../img/print_str.jpg">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="wrapper exmpl">
-                        <img src="../img/phone_4.jpg">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="wrapper exmpl">
-                        <img src="../img/phone.jpg">
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Ноутбук Acer, рабочий, разбита матрица">
+                            <img src="../img/noutebook.jpg">
+                        </a>
                     </div>
                     <div>
-                        Lorem ipsum dolor sit amet.
+                        <a href="#" title="Ноутбук Acer, рабочий, разбита матрица">
+                            <h6>Ноутбук Acer, рабочий, разбита матрица</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 4000 руб.<span><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Владивосток, ул. Шоссейная</p>
+                            <p class="time">01.06.2021</p>
+                        </a>
+
                     </div>
                 </div>
-                <div class="col">
-                    <div class="wrapper exmpl">
-                        <img src="../img/print_str.jpg">
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Кнопочный Nokia, как новый">
+                            <img src="../img/phone.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Кнопочный Nokia, как новый">
+                            <h6>Кнопочный Nokia, как новый</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 500 руб.<span><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Москва</p>
+                            <p class="time">30.05.2021</p>
+                        </a>
+
                     </div>
                 </div>
-                <div class="col">
-                    <div class="wrapper exmpl">
-                        <img src="../img/phone_4.jpg">
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Телефон Huawei, на гарантии!">
+                            <img src="../img/phone_4.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Телефон Huawei, на гарантии!">
+                            <h6>Телефон Huawei, на гарантии!</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 1500 руб.<span><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Новосибирск, ул. Адмирала-Маршала, дом 43</p>
+                            <p class="time">29.05.2021</p>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Раскладушка Motorolla, очень хорошо ловит сввязь">
+                            <img src="../img/phone_2.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Раскладушка Motorolla, очень хорошо ловит сввязь">
+                            <h6>Раскладушка Motorolla, очень хорошо ловит сввязь</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 1000 руб.<span><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Хабаровск</p>
+                            <p class="time">28.05.2021</p>
+                        </a>
+
                     </div>
                 </div>
             </div>
