--- a/pages/category.html
+++ b/pages/category.html
@@ -269,11 +269,104 @@
             </div>
         </div>
 <!--Основной блок объявлений-->
-        <div class="col-9" style="padding-left: 25px">
+        <div class="col-9 block_ads">
+<!--Блок VIP объявлений, не более 4шт.-->
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 block_vip_ads">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                    <h4>VIP объявления</h4>
+                </div>
+                <div class="col ads highlight">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Продам принтер HP 1010 как новый!">
+                            <img src="../img/print_main.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Продам принтер HP 1010 как новый!">
+                            <h6>Продам принтер HP 1010 как новый!</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 3230 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+
+                            <p class="address"> г. Самара, ул. Красногвардейская дом 20</p>
+                            <p class="time">Сегодня, 11:34</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="col ads highlight">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Струйник L800 для печати фотографий">
+                            <img src="../img/print_str.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Струйник L800 для печати фотографий">
+                            <h6>Куплю L800 для печати фотографий</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 6000 руб.<span class="ads_buy"><i class="fa fa-search"></i></span></p>
+                            <p class="address"> г. Хабаровск</p>
+                            <p class="time">Сегодня, 08:42</p>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col ads highlight">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Samsung SCX-4200 как новый">
+                            <img src="../img/printer_2.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Samsung SCX-4200 как новый">
+                            <h6>Samsung SCX-4200 как новый</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 2500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Москва</p>
+                            <p class="time">01.06.2021</p>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col ads highlight">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Ноутбук Acer, рабочий, разбита матрица">
+                            <img src="../img/noutebook.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Ноутбук Acer, рабочий, разбита матрица">
+                            <h6>Ноутбук Acer, рабочий, разбита матрица</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 4000 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Владивосток, ул. Шоссейная</p>
+                            <p class="time">01.06.2021</p>
+                        </a>
+
+                    </div>
+                </div>
+            </div>
+<!--Все объявления из категории-->
+<!--Строка блок выбора сортировки, количества и вида отображения-->
             <div class="row justify-content-end sort">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 select_views">
+                    <a href="#"><span><i class="fa fa-list"></i></span></a>
+                    <a href="#"><span><i class="fa fa-th"></i></span></a>
+                </div>
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2">
+                    <form action="#">
+                        <select class="form-control form-control-sm" id="quantityAds">
+                            <option>16</option>
+                            <option>52</option>
+                            <option>100</option>
+                        </select>
+                    </form>
+                </div>
                 <div class="col-6 col-sm-5 col-md-5 col-lg-3">
                     <form action="#">
-                        <select class="form-control form-control-sm" id="typePrinter">
+                        <select class="form-control form-control-sm" id="sortAds">
                             <option>По возрастанию цены</option>
                             <option>По убванию цены</option>
                             <option>По дате</option>
@@ -370,6 +463,169 @@
                             <p class="price"> 500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Москва</p>
                             <p class="time">30.05.2021</p>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Телефон Huawei, на гарантии!">
+                            <img src="../img/phone_4.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Телефон Huawei, на гарантии!">
+                            <h6>Телефон Huawei, на гарантии!</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 1500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Новосибирск, ул. Адмирала-Маршала, дом 43</p>
+                            <p class="time">29.05.2021</p>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col ads highlight">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Раскладушка Motorolla, очень хорошо ловит сввязь">
+                            <img src="../img/phone_2.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Раскладушка Motorolla, очень хорошо ловит сввязь">
+                            <h6>Раскладушка Motorolla, очень хорошо ловит сввязь</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 1000 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Хабаровск</p>
+                            <p class="time">28.05.2021</p>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Продам принтер HP 1010 как новый!">
+                            <img src="../img/print_main.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Продам принтер HP 1010 как новый!">
+                            <h6>Продам принтер HP 1010 как новый!</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 3230 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+
+                            <p class="address"> г. Самара, ул. Красногвардейская дом 20</p>
+                            <p class="time">Сегодня, 11:34</p>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col ads vip">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Струйник L800 для печати фотографий">
+                            <img src="../img/print_str.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Струйник L800 для печати фотографий">
+                            <h6>Куплю L800 для печати фотографий</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 6000 руб.<span class="ads_buy"><i class="fa fa-search"></i></span></p>
+                            <p class="address"> г. Хабаровск</p>
+                            <p class="time">Сегодня, 08:42</p>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Samsung SCX-4200 как новый">
+                            <img src="../img/printer_2.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Samsung SCX-4200 как новый">
+                            <h6>Samsung SCX-4200 как новый</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 2500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Москва</p>
+                            <p class="time">01.06.2021</p>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Ноутбук Acer, рабочий, разбита матрица">
+                            <img src="../img/noutebook.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Ноутбук Acer, рабочий, разбита матрица">
+                            <h6>Ноутбук Acer, рабочий, разбита матрица</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 4000 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Владивосток, ул. Шоссейная</p>
+                            <p class="time">01.06.2021</p>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Кнопочный Nokia, как новый">
+                            <img src="../img/phone.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Кнопочный Nokia, как новый">
+                            <h6>Кнопочный Nokia, как новый</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Москва</p>
+                            <p class="time">30.05.2021</p>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col ads">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Телефон Huawei, на гарантии!">
+                            <img src="../img/phone_4.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Телефон Huawei, на гарантии!">
+                            <h6>Телефон Huawei, на гарантии!</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 1500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Новосибирск, ул. Адмирала-Маршала, дом 43</p>
+                            <p class="time">29.05.2021</p>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col ads highlight">
+                    <div class="ads_wrapper">
+                        <a href="#" title="Раскладушка Motorolla, очень хорошо ловит сввязь">
+                            <img src="../img/phone_2.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Раскладушка Motorolla, очень хорошо ловит сввязь">
+                            <h6>Раскладушка Motorolla, очень хорошо ловит сввязь</h6>
+                        </a>
+                        <a href="#">
+                            <p class="price"> 1000 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="address"> г. Хабаровск</p>
+                            <p class="time">28.05.2021</p>
                         </a>
 
                     </div>
