Выбор списка отображения на странице категорий сделал через дропдаун список, нервы кончились. Потом нужно будет доработать.

--- a/pages/category.html
+++ b/pages/category.html
@@ -351,9 +351,13 @@
 <!--Все объявления из категории-->
 <!--Строка блок выбора сортировки, количества и вида отображения-->
             <div class="row justify-content-end sort">
-                <div class="col-3 col-sm-3 col-md-2 col-lg-2 select_views">
-                    <a href="#"><span><i class="fa fa-list"></i></span></a>
-                    <a href="#"><span><i class="fa fa-th"></i></span></a>
+                <div class="col-3 col-sm-3 col-md-3 col-lg-2">
+                    <form action="#">
+                        <select class="form-control form-control-sm" id="quantityAds">
+                            <option>Сетка</option>
+                            <option>Список</option>
+                        </select>
+                    </form>
                 </div>
                 <div class="col-3 col-sm-3 col-md-2 col-lg-2">
                     <form action="#">
